theme hack to fix a scrollbar styling problem
certain themes have specific scrollbar styling rules
and for some reason it's not initially being applied.
this patch seems to fix this problem.

--- a/assets/navy-album.css
+++ b/assets/navy-album.css
@@ -23,3 +23,12 @@
     display: flex;
     flex-direction: column;
 }
+
+#na-main-tab.theme-paperdark ::-webkit-scrollbar {
+    width: 10px;
+}
+
+#na-main-tab.theme-darklykai ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
